--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,11 +21,11 @@
   <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
     <form class="form-inline my-2 my-lg-0">
       <% if logged_in? %>
-        <button style="background-color:navy;text-color:white;border:1px solid black;border-radius:5px;margin-left:800px"><%= link_to "Profile", user_path(current_user.id) %></button>
-        <button style="background-color:navy;text-color:white;border:1px solid black;border-radius:5px;margin-left:10px"><%= link_to "Logout", session_path(current_user.id), method: :delete %></button>
+        <button style="color:beige;border:1px solid black;margin-left:800px"><%= link_to "Profile", user_path(current_user.id) %></button>
+        <button style="color:beige;border:1px solid black;margin-left:10px"><%= link_to "Logout", session_path(current_user.id), method: :delete %></button>
       <% else %>
-        <button style="background-color:navy;text-color:white;border:1px solid black;border-radius:5px;margin-left:800px"><%= link_to "Login", new_session_path %></button>
-        <button style="background-color:navy;text-color:white;border:1px solid black;border-radius:5px;margin-left:10px"><%= link_to "SignUp", new_user_path %></button>
+        <button style="color:beige;border:1px solid black;margin-left:800px"><%= link_to "Login", new_session_path %></button>
+        <button style="color:beige;border:1px solid black;margin-left:10px"><%= link_to "SignUp", new_user_path %></button>
       <% end %>
     </form>
   </div>
