--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,7 @@
 <div id="image">
 <p>Recent logins?</p>
 <hr>
-<div class="users">mucyo kean <br><%=image_tag('tj.png')%></div>
-<div class="users">mucyo kean <br><%=image_tag('tj.png')%></div>
-<div class="users">mucyo kean <br><%=image_tag('tj.png')%></div>
+<div class="users">Alexis <br><%=image_tag('fig.png')%></div>
 </div>
 <div id="main">
 <h1>Create a New Account</h1>
@@ -36,5 +34,5 @@
 <% end %>
 </div>
 <nav class="navbar navbar-expand-lg fixed-bottom navbar-light" style="background-color: #fff;color:black">
-  <a class="navbar-brand" href="#" style="margin:auto"><%=image_tag('fcbkicon.png')%>acebook</a>
+  <a class="navbar-brand" href="#" style="margin:auto">Facebook</a>
   </nav>
