--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,7 +17,7 @@
       </p>
       <p>
       <strong>Image:</strong>
-      <%= image_tag @post.image.url, style:"width:500px" %>
+      <%= image_tag @post.image.url, style:"max-width:100%" %>
       </p>
       <%= link_to 'Back', posts_path,class:'btn btn-primary' %>
     </div>
